Update service implementation, controller, and wrapper models